# e

./: comparison.py  pyproject.toml  requirements.txt  train.py  train_scm.py
figs_backdoor_adjustment_model_0.01_30_1.0_50_10_5/checkpoints/: checkpoint_po.index  checkpoint_ps.data-00000-of-00001  checkpoint_ps.index  checkpoint_qpi.data-00000-of-00001  checkpoint_qpi.index  checkpoint_qs.data-00000-of-00001  checkpoint_qs.index  optimizer_down-1.index  optimizer_mid-1.index  optimizer_top-1.data-00000-of-00001  optimizer_top-1.index  stats.pkl  train_backdoor.py
figs_backdoor_adjustment_model_0.01_30_1.0_50_10_5/checkpoints_epoch_25/: checkpoint_po.index  checkpoint_ps.data-00000-of-00001  checkpoint_ps.index  checkpoint_qpi.data-00000-of-00001  checkpoint_qpi.index  checkpoint_qs.data-00000-of-00001  checkpoint_qs.index  optimizer_down-1.index  optimizer_mid-1.index  optimizer_top-1.data-00000-of-00001  optimizer_top-1.index  stats.pkl
figs_backdoor_adjustment_model_0.01_30_1.0_50_10_5/checkpoints_epoch_50/: checkpoint_po.index  checkpoint_ps.data-00000-of-00001  checkpoint_ps.index  checkpoint_qpi.data-00000-of-00001  checkpoint_qpi.index  checkpoint_qs.data-00000-of-00001  checkpoint_qs.index  optimizer_down-1.index  optimizer_mid-1.index  optimizer_top-1.data-00000-of-00001  optimizer_top-1.index  stats.pkl
figs_causal_model_0.01_30_1.0_50_10_5/checkpoints/: checkpoint  checkpoint_po.index  checkpoint_ps.data-00000-of-00001  checkpoint_ps.index  checkpoint_qpi.data-00000-of-00001  stats.pkl  (+8 more)
src/: game_environment.py  tfloss.py  tfmodel.py  tfutils.py  util.py
(+38 files in other folders)
