[tool.poetry]
name = "deep-active-inference-mc"
version = "0.1.0"
description = ""
authors = ["Nicky Pochinkov <work@nicky.pro>"]
readme = "README.md"
packages = [{include = "deep_active_inference_mc"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
opencv-python = "^4.8.1.78"
noise = "^1.2.2"
tensorflow = "^2.15.0"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
